--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -15,8 +15,7 @@ ext.mainProject = "APPTest"
  * 当前如果全量填"RouterAnnotation,Router,LibAndroid,LibThread,LibRequest,LibSqlite,LibAAF,Application,Framework,LibWrapper"
  *
  */
-ext.developModule = "Application"
-
+ext.developModule = "LibImage,LibFileSelect,LibOS"
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
  *  true 全都加载，
