--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -15,7 +15,7 @@ ext.mainProject = "APPTest"
  * 当前如果全量填"RouterAnnotation,Router,LibAndroid,LibThread,LibRequest,LibSqlite,LibAAF,Application,Framework,LibWrapper"
  *
  */
-ext.developModule = "Application"
+ext.developModule = "LibFloatview"
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
  *  true 全都加载，
@@ -33,7 +33,7 @@ ext.pubModuleIsApplication = false
 /**
  * 组件所有模块的最新版本，下次发布时使用
  */
-ext.moduleVersionName = "4.12.17"
+ext.moduleVersionName = "4.12.18"
 
 /************************************ 组件化开发常用配置 ************************************/
 
@@ -525,7 +525,7 @@ ext.moduleInfo = [
                 "version"                : "4.12.15",
                 "artifactId"             : "lib-float-view",
                 "apidependenciesList"    : [
-                        "LibLog", "LibConfig", "LibThread", "LibOS", "LibDialog", "LibToast", "LibPermission"
+                        "LibLog", "LibConfig", "LibThread", "LibOS", "LibDialog", "LibToast", "LibPermission","LibAAF"
                 ],
                 "specialdependenciesList": [
                         "kapt": [
