--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -15,7 +15,7 @@ ext.mainProject = "APPTest"
  * 当前如果全量填"RouterAnnotation,Router,LibAndroid,LibThread,LibRequest,LibSqlite,LibAAF,Application,Framework,LibWrapper"
  *
  */
-ext.developModule = "Application"
+ext.developModule = "LibOS,LibCommonUtils,LibRequest,Framework,LibWrapper"
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
  *  true 全都加载，
@@ -33,7 +33,7 @@ ext.pubModuleIsApplication = false
 /**
  * 组件所有模块的最新版本，下次发布时使用
  */
-ext.moduleVersionName = "4.13.22"
+ext.moduleVersionName = "4.14.0"
 
 /************************************ 组件化开发常用配置 ************************************/
 
@@ -240,7 +240,7 @@ ext.moduleInfo = [
         "LibOS"                     : [
                 "version"            : "4.12.7",
                 "artifactId"         : "lib-android-os",
-                "apidependenciesList": ["LibLog"]
+                "apidependenciesList": ["LibLog", "LibCommonUtils"]
         ],
 
         "LibCommonUtils"            : [
@@ -266,7 +266,7 @@ ext.moduleInfo = [
         "LibRequest"                : [
                 "version"            : "4.13.14",
                 "artifactId"         : "lib-request",
-                "apidependenciesList": []
+                "apidependenciesList": ["LibOS"]
         ],
         "LibGson"                   : [
                 "version"            : "4.12.13",
@@ -323,7 +323,7 @@ ext.moduleInfo = [
         "LibTTS"                    : [
                 "version"            : "4.12.13",
                 "artifactId"         : "lib-tts",
-                "apidependenciesList": ["LibConfig"]
+                "apidependenciesList": ["LibConfig", "LibOS"]
         ],
         "LibFile"                   : [
                 "version"            : "4.13.22",
@@ -332,7 +332,8 @@ ext.moduleInfo = [
                         "com.android.support:support-v4:${project.android_support_version}",
                         "LibEncrypt",
                         "LibCommonUtils",
-                        "LibThread"
+                        "LibThread",
+                        "LibOS"
                 ]
         ],
         "LibZip"                    : [
@@ -353,7 +354,7 @@ ext.moduleInfo = [
         "LibText"                   : [
                 "version"            : "4.5.6",
                 "artifactId"         : "lib-text",
-                "apidependenciesList": ["LibAndroid"]
+                "apidependenciesList": ["LibAndroid", "LibOS"]
         ],
         "LibSuperAPP"               : [
                 "version"            : "4.13.22",
@@ -368,7 +369,7 @@ ext.moduleInfo = [
         "LibCommonUIUtils"          : [
                 "version"            : "4.8.2",
                 "artifactId"         : "lib-ui-common",
-                "apidependenciesList": ["LibAndroid", "LibLog"]
+                "apidependenciesList": ["LibAndroid", "LibOS", "LibLog"]
         ],
         "LibFragmentation_core"     : [
                 "version"            : "4.8.2",
@@ -377,7 +378,7 @@ ext.moduleInfo = [
                         "com.android.support:support-annotations:$project.android_support_version",
                         "com.android.support:appcompat-v7:${project.android_support_version}",
                         "com.android.support:support-v4:${project.android_support_version}",
-                        "LibCommonUIUtils"
+                        "LibCommonUIUtils", "LibOS"
                 ]
         ],
         "LibFragmentation"          : [
@@ -396,7 +397,7 @@ ext.moduleInfo = [
                 "apidependenciesList": [
                         "com.android.support:support-v4:${project.android_support_version}",
                         "com.android.support:support-annotations:$project.android_support_version",
-                        "LibCommonUIUtils"
+                        "LibCommonUIUtils", "LibOS"
                 ]
         ],
         "LibQRCode"                 : [
@@ -405,7 +406,7 @@ ext.moduleInfo = [
                 "apidependenciesList": [
                         "com.android.support:appcompat-v7:${project.android_support_version}",
                         "com.google.zxing:core:3.3.0",
-                        "LibCommonUIUtils"
+                        "LibCommonUIUtils", "LibOS"
                 ]
         ],
         "LibAdapter"                : [
@@ -459,7 +460,7 @@ ext.moduleInfo = [
                 "artifactId"         : "lib-custom-view",
                 "apidependenciesList": [
                         "com.android.support:support-v4:${project.android_support_version}",
-                        "LibAndroid"
+                        "LibAndroid", "LibOS"
                 ]
         ],
         "LibRecycleviewExt"         : [
@@ -525,7 +526,7 @@ ext.moduleInfo = [
                 "version"                : "4.13.22",
                 "artifactId"             : "lib-float-view",
                 "apidependenciesList"    : [
-                        "LibLog", "LibConfig", "LibThread", "LibOS", "LibDialog", "LibToast", "LibPermission","LibAAF"
+                        "LibLog", "LibConfig", "LibThread", "LibOS", "LibDialog", "LibToast", "LibPermission", "LibAAF"
                 ],
                 "specialdependenciesList": [
                         "kapt": [
