--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -15,7 +15,7 @@ ext.mainProject = "APPTest"
  * 当前如果全量填"RouterAnnotation,Router,LibAndroid,LibThread,LibRequest,LibSqlite,LibAAF,Application,Framework,LibWrapper"
  *
  */
-ext.developModule = "Application"
+ext.developModule = "LibAPK"
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
  *  true 全都加载，
@@ -33,7 +33,7 @@ ext.pubModuleIsApplication = false
 /**
  * 组件所有模块的最新版本，下次发布时使用
  */
-ext.moduleVersionName = "4.14.7"
+ext.moduleVersionName = "4.14.8"
 
 /************************************ 组件化开发常用配置 ************************************/
 
@@ -318,7 +318,7 @@ ext.moduleInfo = [
         "LibAPK"                    : [
                 "version"            : "4.14.7",
                 "artifactId"         : "lib-utils-apk",
-                "apidependenciesList": ["LibToast", "LibLog", "LibEncrypt", "LibDeviceNetwork"]
+                "apidependenciesList": ["LibToast", "LibLog", "LibAAF", "LibEncrypt", "LibDeviceNetwork"]
         ],
         "LibTTS"                    : [
                 "version"            : "4.14.4",
