--- a/BaseTest/src/main/AndroidManifest.xml
+++ b/BaseTest/src/main/AndroidManifest.xml
@@ -1,12 +1,12 @@
 <?xml version="1.0" encoding="utf-8"?>
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
-    package="com.bihe0832.android.base.test">
+        package="com.bihe0832.android.base.test">
 
     <application
-        android:allowBackup="true"
-        android:icon="@mipmap/icon"
-        android:label="@string/app_name"
-        android:supportsRtl="true">
+            android:allowBackup="true"
+            android:icon="@mipmap/icon"
+            android:label="@string/app_name"
+            android:supportsRtl="true">
 
 
         <provider
@@ -16,8 +16,7 @@
         <provider
                 android:name="com.bihe0832.android.base.test.ipc.provider.TestBinderProvider"
                 android:authorities="${applicationId}.process_dispatcher_other"
-                android:process=":test"
-                />
+                android:process=":test" />
 
         <activity
                 android:name="com.bihe0832.android.base.test.ipc.TestIPCActivity"
@@ -33,24 +32,34 @@
                 android:theme="@style/activityTheme" />
 
         <activity
-            android:name="com.bihe0832.android.base.test.touch.TouchRegionActivity"
-            android:configChanges="orientation|screenSize|keyboardHidden"
-            android:screenOrientation="portrait"
-            android:theme="@style/activityTheme"/>
-
-
+                android:name="com.bihe0832.android.base.test.touch.TouchRegionActivity"
+                android:configChanges="orientation|screenSize|keyboardHidden"
+                android:screenOrientation="portrait"
+                android:theme="@style/activityTheme" />
 
         <activity
-            android:name="com.bihe0832.android.base.test.request.TestHttpActivity"
-            android:configChanges="orientation|screenSize|keyboardHidden"
-            android:screenOrientation="portrait"
-            android:theme="@style/activityTheme"></activity>
+                android:name="com.bihe0832.android.base.test.request.TestHttpActivity"
+                android:configChanges="orientation|screenSize|keyboardHidden"
+                android:screenOrientation="portrait"
+                android:theme="@style/activityTheme"></activity>
 
         <activity
-            android:name="com.bihe0832.android.base.test.network.TestNetworkActivity"
-            android:configChanges="orientation|screenSize|keyboardHidden"
-            android:screenOrientation="portrait"
-            android:theme="@style/activityTheme"></activity>
+                android:name="com.bihe0832.android.base.test.network.TestNetworkActivity"
+                android:configChanges="orientation|screenSize|keyboardHidden"
+                android:screenOrientation="portrait"
+                android:theme="@style/activityTheme"></activity>
+
+        <activity
+                android:name="com.bihe0832.android.base.test.card.TestListActivity"
+                android:configChanges="orientation|screenSize|keyboardHidden"
+                android:screenOrientation="portrait"
+                android:theme="@style/activityTheme"></activity>
+
+        <activity
+                android:name="com.bihe0832.android.base.test.webview.TestWebviewActivity"
+                android:configChanges="orientation|screenSize|keyboardHidden"
+                android:screenOrientation="portrait"
+                android:theme="@style/activityTheme"></activity>
 
 
         <activity
@@ -64,18 +73,6 @@
                 android:configChanges="orientation|screenSize|keyboardHidden"
                 android:screenOrientation="portrait"
                 android:theme="@style/permissionFullscreen" />
-
-        <activity
-            android:name="com.bihe0832.android.base.test.card.TestListActivity"
-            android:configChanges="orientation|screenSize|keyboardHidden"
-            android:screenOrientation="portrait"
-            android:theme="@style/activityTheme"></activity>
-
-        <activity
-            android:name="com.bihe0832.android.base.test.webview.TestWebviewActivity"
-            android:configChanges="orientation|screenSize|keyboardHidden"
-            android:screenOrientation="portrait"
-            android:theme="@style/activityTheme"></activity>
 
     </application>
 
