--- a/dependencies.gradle
+++ b/dependencies.gradle
@@ -15,7 +15,7 @@ ext.mainProject = "APPTest"
  * 当前如果全量填"RouterAnnotation,Router,LibAndroid,LibThread,LibRequest,LibSqlite,LibAAF,Application,Framework,LibWrapper"
  *
  */
-ext.developModule = "Application"
+ext.developModule = "LibConfig"
 /**
  * 是否将所有依赖了 developModule 的模块都加载进来。
  *  true 全都加载，
@@ -33,7 +33,7 @@ ext.pubModuleIsApplication = false
 /**
  * 组件所有模块的最新版本，下次发布时使用
  */
-ext.moduleVersionName = "4.14.13"
+ext.moduleVersionName = "4.14.14"
 
 /************************************ 组件化开发常用配置 ************************************/
 
@@ -312,7 +312,7 @@ ext.moduleInfo = [
                 "artifactId"         : "lib-config",
                 "apidependenciesList": [
                         "LibCommonUtils",
-                        "com.tencent:mmkv-static:1.2.5"
+                        "com.tencent:mmkv-static:1.2.10"
                 ]
         ],
         "LibAPK"                    : [
