--- a/CommonWebview/src/main/AndroidManifest.xml
+++ b/CommonWebview/src/main/AndroidManifest.xml
@@ -4,14 +4,14 @@
 
     <uses-permission android:name="android.permission.INTERNET" />
     <application>
-        <!--        <activity-->
-        <!--                android:name="com.bihe0832.android.common.webview.WebPageActivity"-->
-        <!--                android:configChanges="orientation|screenSize|keyboardHidden"-->
-        <!--                android:theme="@style/activityTheme"-->
-        <!--                android:hardwareAccelerated="true"-->
-        <!--                android:launchMode="singleInstance"-->
-        <!--                android:process=":web"-->
-        <!--                android:screenOrientation="portrait">-->
+        <activity
+                android:name="com.bihe0832.android.common.webview.WebPageActivity"
+                android:configChanges="orientation|screenSize|keyboardHidden"
+                android:theme="@style/activityTheme"
+                android:hardwareAccelerated="true"
+                android:launchMode="singleInstance"
+                android:process="@string/web_process_name"
+                android:screenOrientation="portrait" />
 
         <!--            <intent-filter>-->
         <!--                <action android:name="android.intent.action.VIEW" />-->
