--- a/CommonWebview/src/main/AndroidManifest.xml
+++ b/CommonWebview/src/main/AndroidManifest.xml
@@ -10,7 +10,7 @@
                 android:theme="@style/activityTheme"
                 android:hardwareAccelerated="true"
                 android:launchMode="singleInstance"
-                android:process="@string/web_process_name"
+                android:process="@string/com_bihe0832_web_process_name"
                 android:screenOrientation="portrait" />
 
         <!--            <intent-filter>-->
