--- a/Application/src/main/AndroidManifest.xml
+++ b/Application/src/main/AndroidManifest.xml
@@ -21,18 +21,27 @@
                 android:configChanges="orientation|screenSize|keyboardHidden"
                 android:screenOrientation="portrait"
                 android:theme="@style/activityTheme" />
-        
+
         <activity android:name="com.bihe0832.android.common.webview.WebPageActivity">
 
             <intent-filter>
                 <action android:name="android.intent.action.VIEW" />
 
-                <category android:name="android.intent.category.DEFAULT" />
                 <category android:name="android.intent.category.BROWSABLE" />
+                <category android:name="android.intent.category.DEFAULT" />
 
-                <data android:scheme="http" />
-                <data android:scheme="https" />
+                <data
+                        android:scheme="https"
+                        android:host="*.ptlogin2.qq.com" />
+
+<!--                <data-->
+<!--                        android:host="*"-->
+<!--                        android:scheme="http" />-->
+<!--                <data-->
+<!--                        android:host="*"-->
+<!--                        android:scheme="https" />-->
             </intent-filter>
+
         </activity>
 
     </application>
