--- a/Application/src/main/AndroidManifest.xml
+++ b/Application/src/main/AndroidManifest.xml
@@ -30,16 +30,8 @@
                 <category android:name="android.intent.category.BROWSABLE" />
                 <category android:name="android.intent.category.DEFAULT" />
 
-                <data
-                        android:scheme="https"
-                        android:host="*.ptlogin2.qq.com" />
+                <data android:scheme="https" android:host="*.ptlogin2.qq.com" />
 
-<!--                <data-->
-<!--                        android:host="*"-->
-<!--                        android:scheme="http" />-->
-<!--                <data-->
-<!--                        android:host="*"-->
-<!--                        android:scheme="https" />-->
             </intent-filter>
 
         </activity>
