--- a/LibDeviceNetwork/src/main/AndroidManifest.xml
+++ b/LibDeviceNetwork/src/main/AndroidManifest.xml
@@ -1,3 +1,7 @@
 <manifest xmlns:android="http://schemas.android.com/apk/res/android"
 
-    package="com.bihe0832.android.lib.device.network"></manifest>
+    package="com.bihe0832.android.lib.device.network">
+
+    <uses-permission android:name="android.permission.ACCESS_NETWORK_STATE" />
+    <uses-permission android:name="android.permission.ACCESS_WIFI_STATE" />
+</manifest>
